Fix login page on iphone 6s, 6 and 5

--- a/bahamas/web/style/css/custom.css
+++ b/bahamas/web/style/css/custom.css
@@ -185,14 +185,16 @@ body {
     .twc2-logo,
     .login-box-body, 
     .register-box-body {
+        padding-top: 50px;
         max-width: 50%;
         max-height: 50%;
     }
 }
 
-@media(max-width: 360px) {
+@media(max-width: 420px) {
     .login-box-body, 
     .register-box-body {
+        padding-top: 0px;
         max-width: 100%;
         max-height: 100%;
     }
